load("@crates//:defs.bzl", "crates_from")
load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "jupiter",
    srcs = glob(["src/**/*.rs"]),
  #   srcs = [
		# 	"src/main.rs"
		# ],
		visibility = ["//visibility:public"],
    deps = crates_from("//jupiter:Cargo.toml") + ["//neptune"],
)
