[package]
name = "jupiter"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "jupiter"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neptune = { path = "../neptune" }
chrono = "0.4.19"
config = "0.11.0"

# grpc, tonic
tonic = "0.5.2"
prost = "0.8.0"
prost-types = "0.8.0"

# tokio
tokio = { version = "1.12.0", features = ["full"] }
tokio-stream = "0.1.7"
futures = "0.3.17"

# serde, types
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

# errors
anyhow = "1.0.44"
thiserror = "1.0.29"

# telemetry
tracing = { version = "0.1.29", features = ["log"] }
tracing-futures = "0.2.5"
tracing-log = { version = "0.1.2", features = ["env_logger"] }
tracing-subscriber = { version = "0.2.25", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.6"

# Open-telemetry and jaeger
opentelemetry = { version = "0.16.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.15.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.15.0"

# databases
dgraph-tonic = "0.9.0"
